# unipytasks

./: .gitignore  README.md  coverage.xml  environment.yml  pyproject.toml
.github/workflows/: pytest.yml
python_exercises/: python_exercise_1.ipynb
pythontasks/: main.py
pythontasks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pythontasks/modules/: 1.1.py  1.2.py  GC_content.py  chunk_dna.py  framed_translation.py  genbank_chunk_dna  nucleotide_count.py  reverse_complement.py  transcribe_dna.py  translate_dna.py
pythontasks/utils/: entrez_efetch.py  gb_transcript.py  logger.py
tests/: test_GC_content.py  test_chunk_dna.py  test_framed_translation.py  test_genbank_chunk_dna.py  test_nucelotide_count.py  test_reverse_complement.py  test_transcribe_dna.py  tmp.py
