[project]
name = "pythontasks"
version = "1.0.0"
description = "Toolkit that manipulates DNA (and other) sequences"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "test", email = "admin@test.org" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Bioinformatics",
  "Programming Language :: Python :: 3.12"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["pythontasks*"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"